# hello-thermo

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  rbm.py  rbm_thrml.py  rbm_thrml_slides.md  simple.py
