[project]
name = "hello-thermo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.13.2",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "thrml>=0.1.3",
]
